--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+:root {
+    --background: 0 0% 10%; /* Example dark gray */
+    --foreground: 0 0% 100%; /* White text */
+    --border: 0 0% 50%; /* Example border */
+    
+  }
+  
+  body {
+    @apply font-sans antialiased m-0;
+    background-color: hsl(var(--background));
+    color: hsl(var(--foreground));
+  }
+  
+  *, *::before, *::after {
+    @apply box-border;
+    border: 0 solid hsl(var(--border));
+  }
+
