--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,17 @@ body.dark-mode {
   @apply box-border;
   border: 0 solid hsl(var(--border));
 }
+
+::selection {
+  background-color: transparent;
+  text-shadow: none;
+  color: blueviolet;
+
+}
+
+::-moz-selection {
+  background-color: transparent;
+  text-shadow: none;
+  color: blueviolet;
+
+}
